--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
   </section>
 <section>
     <h2>8. Bideoa</h2>
-    <video src="video.mp4" controls></video>
+    <video controls width="600">
+  <source src="video/video.mp4" type="video/mp4">
+</video>
   </section>
 
   <section>
