--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <section>
     <h2>8. Bideoa</h2>
     <video controls width="600">
-  <source src="video/video.mp4" type="video/mp4">
+  <source src="video.mp4" type="video/mp4">
 </video>
   </section>
 
