--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="eu">
+<meta name="google-site-verification" content="RbC9AIZ62qPQgNpk-b1hwGQRQtDExirtO2iF76o0vAs" />
 <body>
   <h1>EUSKAL KAFEA</h1>
   <head>
