--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="eu">
-<meta name="google-site-verification" content="RbC9AIZ62qPQgNpk-b1hwGQRQtDExirtO2iF76o0vAs" />
+<meta name="google-site-verification" content="google06a0ae2e9036ae79" />
 <body>
   <h1>EUSKAL KAFEA</h1>
   <head>
@@ -85,4 +85,5 @@
 
   <footer style="text-align:center;margin-top:18px;color:#6b7280">Fitxategi erraza — aldatu zure izenarekin eta edukiekin. Gogoratu canvas-en irekita dagoela.</footer>
 </body>
+
 </html>
