--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <body>
   <h1>EUSKAL KAFEA</h1>
   <head>
-    <meta name="google-site-verification" content="google06a0ae2e9036ae79" />
+      <meta charset="UTF-8">
+  <meta name="google-site-verification" content="google06a0ae2e9036ae79" />
         <title>Image</title>
     </head>
             <img src="Logo.jpg" alt="Logo" width="300">
@@ -87,4 +88,5 @@
 </body>
 
 </html>
+
 
