--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!doctype html>
 <html lang="eu">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="google-site-verification" content="google06a0ae2e9036ae79" />
+    <title>EUSKAL KAFEA</title>
+</head>
 <body>
   <h1>EUSKAL KAFEA</h1>
   <head>
@@ -88,5 +93,6 @@
 </body>
 
 </html>
+
 
 
